--- a/Starting/main.css
+++ b/Starting/main.css
@@ -1,12 +1,22 @@
 /*main.css*/
 
+
 html, body, h1, h2, h3, h4, p, div, ul, ol, li {
 	padding: 0;
 	border: 0;
 	margin: 0;
 	font: inherit;
-	font-size: 100%; 
+	font-size: 100%;
 }
+
+body {
+   background-image: url("https://geniewifi.com/wp-content/uploads/2017/03/family-computer-new.jpg");
+	 background-repeat: no-repeat;
+   background-color: #cccccc;
+	 background-size: 80% auto;
+	 background-position: center center;
+}
+
 h1 {
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 70px;
@@ -14,10 +24,10 @@ h1 {
 	text-align: center;
 }
 h2 {
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 30px;
 	font-weight: 100;
-	text-align: center; 
+	text-align: center;
 	color: #ffffff;
 	width: 500px;
 	margin: 0 auto 0 auto;
@@ -26,7 +36,7 @@ h2 strong {
 	font-weight: 500;
 }
 h3 {
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 30px;
 	font-weight: normal;
 	text-align: center;
@@ -34,8 +44,8 @@ h3 {
 	margin: 10px 0 15px 0;
 }
 p {
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-	font-size: 16px;	
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 16px;
 }
 .header {
 	background-color: #999999;
